--- a/.github/workflows/onboard-response-trigger.yml
+++ b/.github/workflows/onboard-response-trigger.yml
@@ -18,4 +18,9 @@ jobs:
       repo_name: ${{ github.repository }}
       comment_body: ${{ github.event.comment.body }}
       commenter: ${{ github.event.comment.user.login }}
-    secrets: inherit
+    secrets:
+      GIST_PAT: ${{ secrets.GIST_PAT }}
+      DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
+      DISCORD_GUILD_ID: ${{ secrets.DISCORD_GUILD_ID }}
+      DISCORD_APPRENTICE_ROLE_ID: ${{ secrets.DISCORD_APPRENTICE_ROLE_ID }}
+      # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
