--- a/.github/workflows/update-trigger.yml
+++ b/.github/workflows/update-trigger.yml
@@ -27,6 +27,6 @@ jobs:
       pr_number: ${{ github.event.pull_request.number }}
       repo_name: ${{ github.repository }}
       pr_author: ${{ github.event.pull_request.user.login }}
-      lines_changed: ${{ needs.calculate.outputs.lines_changed }}
+      lines_changed: ${{ fromJson(needs.calculate.outputs.lines_changed) }}
       pr_labels: ${{ toJson(github.event.pull_request.labels.*.name) }}
     secrets: inherit
