Revert "check org secret"
This reverts commit 7f9d68256b9d26f9ff379e41ede1bd1ab757b3f9.

--- a/.github/workflows/update-trigger.yml
+++ b/.github/workflows/update-trigger.yml
@@ -9,6 +9,7 @@ jobs:
     # Run on any merged PR (not just first-time contributors)
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    environment: GIST_PAT  # Use environment secret
     outputs:
       lines_changed: ${{ steps.calc.outputs.lines_changed }}
     steps:
