--- a/.github/workflows/update-trigger.yml
+++ b/.github/workflows/update-trigger.yml
@@ -10,6 +10,9 @@ jobs:
     # Run on any merged PR (not just first-time contributors)
     if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
     outputs:
       lines_changed: ${{ steps.calc.outputs.lines_changed }}
     steps:
